--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -13,7 +13,7 @@
     justify-content: center; /* statt justify-content: space-between; */
     background-color: #000000;
     height: 100px; /* Höhe, damit der Footer sichtbar ist */
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
   }
