--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -9,7 +9,6 @@
 }
 .logo {
   filter: invert(1);
-  margin: 1rem;
 }
 
 
@@ -26,6 +25,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: #000000;
+  height:'15svh';
 }
 .navlist li:nth-child(-n+4){
     translate: -80%;
@@ -46,37 +46,69 @@
   color: white;
 }
 
-.togglebutton{
-  position: absolute;
-  display: none;
+.menue{
+  --bar-width: 60px;
+  --bar-height: 8px;
+  --hamburger-gap: 6px;
+  --forground: white;
+}
+
+.hamburgermenu{
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  right:  2rem;
-  top: 4rem;
-  width: 60px;
-  height: 42px;
-  background-color: #000000;
+  gap: var(--hamburger-gap);
+  width: max-content;
+  position: absolute;
+  top: 45px;
+  right: 15px;
+  z-index: 2;
 }
-.togglebutton .bar{
-  height: 8px;
-  width: 100%;
-  background-color: white;
-  border-radius: 10px;
+
+.hamburgermenu input {
+  appearance: none;
+  padding: 0;
+  margin: 0;
+  outline: transparent;
+  pointer-events: none;
 }
+
+.hamburgermenu input:checked {
+  background: red;
+}
+
+
+.hamburgermenu::before, 
+.hamburgermenu::after,
+.hamburgermenu input {
+  content: "";
+  width: var(--bar-width);
+  height: var(--bar-height);
+  background-color: var(--forground);
+  border-radius:1rem;
+  
+}
+
 
 
 @media screen and (max-width: 805px) {
-  .togglebutton {
+
+
+  .hamburgermenu:has(input:checked) + .navlist ul{
     display: flex;
-  }
-  .navlist li:nth-child(-n+4){
-      translate: 0;
+  }  
+
+  .navlist{
+    position: relative;
+    top: -25px;
+    width: 40%;
   }
 
   .navlist ul{
+    display: none;
     flex-direction: column;
-    width: 100%;
+    background: #000000;
+
+
   } 
   .navlist li {
     align-items: center;
