--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -8,19 +8,18 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	animation: animate 15s infinite;
+	animation: animate 11s infinite;
 	opacity: 0;
-	background-position: center center;
     object-fit: cover;
 }
 .picturecarousel>img:nth-child(2) {
-	animation-delay: 4s;
+	animation-delay: 3s;
 }
 .picturecarousel>img:nth-child(3) {
-	animation-delay: 8s;
+	animation-delay: 6s;
 }
 .picturecarousel>img:nth-child(4) {
-	animation-delay: 12s;
+	animation-delay: 9s;
 }
 
 
@@ -101,6 +100,7 @@
   z-index:-1;
   width: 0%;
   height:1px;
+  background: #6098FF;
   box-shadow: inset 0px 0px 0px #6098FF;
   display: block;
   -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
