--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -3,6 +3,7 @@
     display:flex;
     position: relative;
     width: 100%;
+    height: 85svh;
 }
 .picturecarousel>img {
 	width: 100%;
@@ -40,6 +41,7 @@
     text-align: center;
     color: #FBFBFB ;
     width: 80%;
+    transform: translateY(30svh);
     position: absolute;
 
 }
@@ -60,8 +62,8 @@
     width: 100%;
     position: absolute;
     justify-content: center;
-
-
+    transform: translateY(50svh);
+    
   }
 
 .buttonwrapper {
@@ -69,6 +71,7 @@
     text-align: center;
     width: 100%;
     position: absolute;
+    transform: translateY(70svh);
   }
   
 .btn{
@@ -160,6 +163,7 @@
     position: absolute;
     margin-left: 50%;
     transform: translateY(-12vh);
+    display: flex;
 }
 .formcontainer{
     width: 100%;
@@ -214,6 +218,10 @@
 }
 @media screen and (max-width: 1245px) {
 
+    .picturecarousel{
+        height: 40svh;
+    }
+
     .infotext{
         margin-left: 25%;
         margin-right: 25%;
@@ -232,7 +240,19 @@
 
         height: 330px;
 
-    }    
+    }
+    
+    .h1carousel{
+        transform: translateY(5svh);
+    }
+    .pcarousel{
+        transform: translateY(12svh);
+    }
+
+    .buttonwrapper{
+        transform: translateY(25svh);
+    }
+    
 
 }
 @media screen and (max-width: 805px) {
@@ -254,6 +274,9 @@
     }
     .h1carousel {
         font-size: 18px;
+    }
+    .verticalbar {
+        display: none;
     }
 
 }
