--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -15,6 +15,7 @@
 
 /* Change color on hover */
 .navlist ul{
+
   list-style-type: none;
   display: flex;
   
@@ -26,11 +27,13 @@
   align-items: center;
   justify-content: space-between;
   background-color: #000000;
-  height:'15svh';
+  height:'17svh';
+  --bar-width: 60px;
+  --bar-height: 8px;
+  --hamburger-gap: 6px;
+  --forground: white;
 }
-.navlist li:nth-child(-n+4){
-    translate: -80%;
-}
+
 
 .navlist li a{
   margin: 1rem;
@@ -47,12 +50,7 @@
   color: white;
 }
 
-.menue{
-  --bar-width: 60px;
-  --bar-height: 8px;
-  --hamburger-gap: 6px;
-  --forground: white;
-}
+
 
 .hamburgermenu{
   display: none;
@@ -61,7 +59,7 @@
   width: max-content;
   position: absolute;
   top: 5svh;
-  right: 5%;
+  left: 10%;
   z-index: 2;
   justify-content: center;
   align-items: center;
@@ -102,26 +100,42 @@
   .hamburgermenu:has(input:checked) + .navlist ul{
     display: flex;
   }
-  
+
+.hamburgermenu:has(input:checked) +  .navlist .navlistbackground{
+  display: block;
+}
 
   .navlist{
     position: relative;
-    top: -25px;
-    width: 40%;
+    width: 100%;
+    margin-top: 50%;
+
   }
+
 
   .navlist ul{
+    position: relative;
     display: none;
     flex-direction: column;
-    background: #000000;
-
-
+    width: 80%;
   } 
+
   .navlist li {
+   
+    margin: 0;
+    justify-content: center;
     align-items: center;
+
   }
+  .logo{
+    display: none;
+  }
+
   .navbar{
+    position: fixed;
+    width: 40%;
     flex-direction: column;
+    height: 100svh;
   }
   
 
