--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -23,6 +23,7 @@
 
 
 .navbar {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -133,6 +134,7 @@
   }
 
   .navbar{
+    position: absolute;
     flex-direction: column; 
   }
   
