--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -4,8 +4,10 @@
     flex-wrap: wrap;
     width: 100%;
     height: 85svh;
+    
 }
 .picturecarousel>img {
+    z-index: -1;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -36,6 +38,7 @@
 	}
 }
 .h1carousel {
+    z-index: -1;
     font-size: 35px;
     font-family: sans-serif;
     text-align: center;
@@ -54,6 +57,7 @@
 }
 
 .pcarousel {
+    z-index: -1;
     font-family: sans-serif;
     text-align: center;
     line-height: 1.5;
@@ -74,8 +78,7 @@
   }
   
 .btn{
-  padding: 15px 100px;
-  margin:10px 4px;
+  padding: 15px 50px;
   color: #FBFBFB ;
   font-family: sans-serif;
   text-transform: uppercase;
@@ -245,13 +248,20 @@
         transform: translateY(12svh);
     }
 
-    .buttonwrapper{
-        transform: translateY(25svh);
-    }
+    
     
 
 }
 @media screen and (max-width: 805px) {
+
+    .buttonwrapper{
+        transform: translateY(25svh);
+        margin-left: 44%;
+    }
+
+    .btn{
+        padding: 15px 50px;
+    }
     .infotext{
         font-size: 16px;
     }
