--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -30,7 +30,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: #000000;
-  height:'17svh';
+  height:17svh;
   --bar-width: 60px;
   --bar-height: 8px;
   --hamburger-gap: 6px;
