--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,10 +1,11 @@
 .formroot{
 	height: 800px;
+	flex: 1 2 600px;
 }
 
 .msform {
 	width: 600px;
-	margin: 50px auto;
+	margin-top: 50px;
 	text-align: center;
 	position: relative;
 }
