--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,5 +1,12 @@
+
+
 .pagewrapper{
     font-family:Georgia, 'Times New Roman', Times, serif; 
+}
+
+.herocarouselcontainer {
+    width: 100%;
+    height: 100svh;
 }
 
 .picturecarousel {
@@ -9,74 +16,52 @@
     height: 85svh;
     
 }
-.picturecarousel>img {
-    z-index: -1;
+.carouselimages {
+    z-index: 1;
 	width: 100%;
 	height: 100%;
-	position: absolute;
-	animation: animate 11s infinite;
-	opacity: 0;
     object-fit: cover;
 }
-.picturecarousel>img:nth-child(2) {
-	animation-delay: 3s;
-}
-.picturecarousel>img:nth-child(3) {
-	animation-delay: 6s;
-}
-.picturecarousel>img:nth-child(4) {
-	animation-delay: 9s;
-}
 
-
-@keyframes animate {
-	10% {
-		opacity: 1;
-	}
-	20% {
-		opacity: 1;
-	}
-	30% {
-		opacity: 0;
-	}
-}
 .h1carousel {
-    z-index: -1;
+    z-index: 1;
     font-size: 35px;
     text-align: center;
-    color: #FBFBFB ;
-    width: 80%;
-    transform: translateY(30svh);
+    color: var(--main-text-color) ;
+    transform: translateY(-60svh);
+    margin-left: 35%;
     position: absolute;
 }
 
 .hrcarousel {
+    z-index: 1;
     width: 100%;
-    color: #FBFBFB ;
+    color: var(--main-text-color) ;
     position: absolute;
     justify-content: center;
 }
 
 .pcarousel {
-    z-index: -1;
+    z-index: 1;
     text-align: center;
     line-height: 1.5;
     font-size: 25px;
-    color: #FBFBFB ;
+    color: var(--main-text-color) ;
     position: absolute;
-    transform: translateY(50svh); 
+    transform: translateY(-50svh);
+    margin-left: 35%;
   }
 
 .buttonwrapper {
     text-align: center;
     position: absolute;
-    margin-left: 20%;
-    transform: translateY(70svh);
+    margin-left: 45%;
+    transform: translateY(-10svh);
   }
   
 .btn{
   padding: 15px 50px;
-  color: #FBFBFB ;
+  color: var(--main-text-color) ;
   font-family: sans-serif;
   text-transform: uppercase;
   text-align: center;
@@ -137,7 +122,7 @@
     flex-wrap: wrap;
     width: 100%;
     background: #1D1D1D;
-    height: 220svh;
+    height: 120svh;
 }
 
 .layoutpicture{
@@ -186,9 +171,8 @@
 }
 
 .textwrap{
-    margin-left: 15%;
-    border-style: dashed;
-    width: 50%;
+    margin-left: 6%; 
+    width: 40%;
     position: relative;
     height: 60svh;
 }
@@ -205,15 +189,45 @@
 
 }
 
-.producttext{
+.productcontainer{
     margin-bottom: 10%;
     margin-left: 5%;
     flex-flow: column wrap;
     line-height: 1.5;
     font-size: 18px;
     background: #1D1D1D;
-    color: #FBFBFB ;
+    color: var(--main-text-color) ;
     width: 40%;
+    height: 30svh;
+}
+
+
+.producttext{
+    z-index: 2;
+    transform: translateY(-30svh);
+}
+
+.productcontainer>img {
+    z-index: 1;
+    position: relative;
+    width: 100%;
+    height:100%;
+    object-fit: fill;
+    border-radius: 8px;
+    mix-blend-mode: color-dodge;
+    filter: saturate(2);
+
+}
+
+.customerratingcarousel {
+    width: 100%;
+    height: 100svh;
+}
+
+.cardgrid {
+    width: '25%';
+    text-align: 'center';
+
 }
 
 .verticalbar {
@@ -224,6 +238,7 @@
     display: flex;
 }
 .formcontainer{
+    display: inline-flex;
     width: 100%;
     margin-top: 5%;
     margin-left: auto;
@@ -265,20 +280,32 @@
     margin-left: 10%;
     margin-top: 10%;
     width: 80%;
-    color: #FBFBFB ;
+    color: var(--main-text-color) ;
 }
 .textwrap h2 {
     margin-left: 10%;
     transform: translateY(4svh);
     width: 50%;
-    color: #FBFBFB ;
+    color: var(--main-text-color) ;
 }
 
 .textwrap .h3 {
     margin-top: 2%;
     margin-left: 10%;
-    color: #FBFBFB ;
+    color: var(--main-text-color) ;
+
 }
+
+.contactinfowrapper{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    margin-left: 30%;
+}
+
+
+
 @media screen and (max-width: 1245px) {
 
     .picturecarousel{
@@ -293,8 +320,8 @@
 
     }
     .buttonwrapper{
-        transform: translateY(25svh);
         margin-left: 44%;
+        transform: translateY(-30svh);
     }
     
     .backgroundcontainer{
@@ -304,10 +331,10 @@
     }
     
     .h1carousel{
-        transform: translateY(5svh);
+        font-size: 25px;
     }
     .pcarousel{
-        transform: translateY(12svh);
+        font-size: 16px;
     }
 
 }
@@ -334,6 +361,7 @@
     }
     .formcontainer{
         margin: auto;
+        display: flex;
         
     }
     .layoutpicture{
