--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -238,17 +238,15 @@
     display: flex;
 }
 .formcontainer{
-    display: inline-flex;
-    width: 100%;
     margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto; 
+    margin-bottom: 5%;
 }
 
 .contactcontainer{
     background: #1A1F23;
-    width: 100%;
+    width: 50%;
     height: 660px;
+    margin: auto;
 }
 
 .tilecontainer{
@@ -299,9 +297,8 @@
 .contactinfowrapper{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    width: 100%;
-    margin-left: 30%;
+    width: 80%;
+    margin: auto;
 }
 
 
