--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,4 +1,4 @@
-.formroot{
+.formroot {
 	height: 800px;
 	flex: 1 2 600px;
 }
@@ -9,6 +9,7 @@
 	text-align: center;
 	position: relative;
 }
+
 .fieldset {
 	background: white;
 	border: 0 none;
@@ -24,7 +25,8 @@
 }
 
 /*inputs*/
-.msform input, .msform textarea {
+.msform input,
+.msform textarea {
 	padding: 25px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -35,6 +37,7 @@
 	color: #1A1F23;
 	font-size: 13px;
 }
+
 /*buttons*/
 .msform .actionbutton {
 	width: 100px;
@@ -46,12 +49,15 @@
 	cursor: pointer;
 	padding: 10px;
 	margin: 10px 5px;
-    text-decoration: none;
-    font-size: 14px;
+	text-decoration: none;
+	font-size: 14px;
 }
-.msform .action-button:hover, .msform .action-button:focus {
+
+.msform .action-button:hover,
+.msform .action-button:focus {
 	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
 }
+
 /*headings*/
 .fstitle {
 	font-size: 15px;
@@ -66,6 +72,7 @@
 	/*CSS counters to number the steps*/
 	counter-reset: step;
 }
+
 .progressbar li {
 	list-style-type: none;
 	color: white;
@@ -75,6 +82,7 @@
 	float: left;
 	position: relative;
 }
+
 .progressbar li:before {
 	content: counter(step);
 	counter-increment: step;
@@ -87,6 +95,7 @@
 	border-radius: 3px;
 	margin: 0 auto 5px auto;
 }
+
 /*progressbar connectors*/
 .progressbar li:after {
 	content: '';
@@ -96,15 +105,19 @@
 	position: absolute;
 	left: -50%;
 	top: 9px;
-	z-index: -1; /*put it behind the numbers*/
+	z-index: -1;
+	/*put it behind the numbers*/
 }
+
 .progressbar li:first-child:after {
 	/*connector not needed before the first step*/
-	content: none; 
+	content: none;
 }
+
 /*marking active/completed steps green*/
 /*The number of the step and the connector before it = green*/
-.progressbar li.active:before,  .progressbar li.active:after{
+.progressbar li.active:before,
+.progressbar li.active:after {
 	background: #27AE60;
 	color: white;
 }
@@ -118,15 +131,14 @@
 	overflow-y: auto;
 	background-color: #f9f9f9;
 	min-width: 80%;
-	box-shadow: 0px 8px 16px 
-		0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
 	grid-template-columns: repeat(2, 1fr);
-  	grid-auto-rows: max-content;
+	grid-auto-rows: max-content;
 	width: 400px;
 	max-height: 360px;
-  	grid-column-gap: 20px;
-  	grid-row-gap: 20px;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
 	transition: 0.3s;
 }
 
@@ -135,7 +147,7 @@
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
-	
+
 }
 
 .dropdown:hover .dropdowncontent {
@@ -143,7 +155,7 @@
 
 }
 
-.dropdowncontent::-webkit-scrollbar{
+.dropdowncontent::-webkit-scrollbar {
 	width: 15px;
 }
 
@@ -156,9 +168,9 @@
 
 .label {
 	position: relative;
-  }
-  
-  .label:before {
+}
+
+.label:before {
 	content: "";
 	position: absolute;
 	right: 20px;
@@ -166,13 +178,13 @@
 	bottom: 0;
 	width: 20px;
 	background: url("data:image/svg+xml,%3Csvg fill='%23000000' version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='140px' height='140px' viewBox='0 0 100 100' enable-background='new 0 0 100 100' xml:space='preserve'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cg%3E%3Cpath d='M78.466,35.559L50.15,63.633L22.078,35.317c-0.777-0.785-2.044-0.789-2.828-0.012s-0.789,2.044-0.012,2.827L48.432,67.58 c0.365,0.368,0.835,0.563,1.312,0.589c0.139,0.008,0.278-0.001,0.415-0.021c0.054,0.008,0.106,0.021,0.16,0.022 c0.544,0.029,1.099-0.162,1.515-0.576l29.447-29.196c0.785-0.777,0.79-2.043,0.012-2.828S79.249,34.781,78.466,35.559z'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E") center / contain no-repeat;
-  }
-  
+}
+
 
 @media screen and (max-width: 805px) {
 
-.msform {
-	width: 90%;
-}
+	.msform {
+		width: 90%;
+	}
 
 }
